--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <div class="post">
 
+  {% if page.banner_image %}
+  <img src="{{ site.baseurl }}/assets/images/{{ page.banner_image }}" alt="{{ page.title }} Banner" style="width: 100%; max-height: 300px; object-fit: cover; object-position: center; margin-bottom: 2rem; display: block;">
+  {% endif %}
+
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
